* SensorThingsClient now available through bintray.